Fixed cutting off issue.

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -46,8 +46,6 @@ ul li{
 
 #canvas{
     display: flex;
-    width: auto;
-    height: 50%;
 }
 
 .toolTip {
